# neural-structure-field

./: .gitignore  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: lint-and-test.yaml
data/dataset_paper/: .gitignore
data/dataset_paper/dataset_ICSG3D_test/: dataset.pkl  dataset_attr.json
data/dataset_paper/dataset_ICSG3D_train/: dataset_attr.json
data/dataset_paper/dataset_ICSG3D_val/: dataset.pkl  dataset_attr.json
data/dataset_paper/dataset_YBCO13_fold0_test/: dataset.pkl  dataset_attr.json
data/dataset_paper/dataset_YBCO13_fold0_train/: dataset.pkl  dataset_attr.json
data/dataset_paper/dataset_YBCO13_fold0_val/: dataset.pkl  dataset_attr.json
data/dataset_paper/dataset_YBCO13_fold10_test/: dataset.pkl  dataset_attr.json
data/dataset_paper/dataset_YBCO13_fold10_train/: dataset.pkl  dataset_attr.json
data/dataset_paper/dataset_YBCO13_fold10_val/: dataset.pkl  dataset_attr.json
data/dataset_paper/dataset_YBCO13_fold11_test/: dataset.pkl  dataset_attr.json
data/dataset_paper/dataset_YBCO13_fold11_train/: dataset.pkl  dataset_attr.json
data/dataset_paper/dataset_YBCO13_fold11_val/: dataset.pkl  dataset_attr.json
data/dataset_paper/dataset_YBCO13_fold12_test/: dataset.pkl  dataset_attr.json
data/dataset_paper/dataset_YBCO13_fold12_train/: dataset.pkl  dataset_attr.json
data/dataset_paper/dataset_YBCO13_fold12_val/: dataset.pkl  dataset_attr.json
data/dataset_paper/dataset_YBCO13_fold13_test/: dataset.pkl  dataset_attr.json
data/dataset_paper/dataset_YBCO13_fold13_train/: dataset.pkl  dataset_attr.json
data/dataset_paper/dataset_YBCO13_fold13_val/: dataset.pkl  dataset_attr.json
data/dataset_paper/dataset_YBCO13_fold14_test/: dataset.pkl  dataset_attr.json
data/dataset_paper/dataset_YBCO13_fold14_train/: dataset.pkl  dataset_attr.json
data/dataset_paper/dataset_YBCO13_fold14_val/: dataset.pkl  dataset_attr.json
data/dataset_paper/dataset_YBCO13_fold15_test/: dataset.pkl  dataset_attr.json
data/dataset_paper/dataset_YBCO13_fold15_train/: dataset.pkl  dataset_attr.json
data/dataset_paper/dataset_YBCO13_fold15_val/: dataset.pkl  dataset_attr.json
data/dataset_paper/dataset_YBCO13_fold16_test/: dataset.pkl  dataset_attr.json
dev_scripts/: run_info.py  run_script.sh
environments/: Dockerfile
environments/ci/: docker-compose.yaml
environments/cpu/: docker-compose.yaml
environments/gpu/: docker-compose.yaml
src/: evaluate.py  model.py  mp_dataset.py  reconstruction.py  train.py  utils.py
src/config/: config.yaml
src/config/dataset/: ICSG3D.yaml  YBCO13.yaml  (+23 more)
src/dataset_generation/: .gitignore  01_download.py  02_extract_structures.py  03_convert_to_conventional_cell.py  04_01_select_materials_by_cell.py  04_02_select_materials_by_formula.py  04_03_select_materials_by_list.py  05_split.py  06_generate_NeSF_dataset.py  README.md  retrieved_neighbours_mp-20674_YBCO.csv
(+84 files in other folders)
