[tool.poetry]
name = "NeSF"
version = "1.0.0"
description = "Official implementation of Neural Structure Fields with Application to Crystal Structure Autoencoders"
license = "MIT"
authors = ["Naoya Chiba, Yuta Suzuki, Tatsunori Taniai, Ryo Igarashi, Yoshitaka Ushiku, Kotaro Saito, Kanta Ono"]
maintainers = ["naoya chiba <chiba@nchiba.net>"]
readme = "README.md"
keywords = [
    "NeSF",
    "Neural Structure Field",
    "Materials Informatics",
]
classifiers = [
    "Environment :: GPU :: NVIDIA CUDA",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Japanese",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.0.1+cu118", source = "torch_cu118"}
torchvision = {version = "^0.15.2+cu118", source = "torch_cu118"}
torchaudio = {version = "^2.0.2+cu118", source = "torch_cu118"}
torch-geometric = "^2.3.1"
pymatgen = "^2023.8.10"
mp-api = "^0.34.3"
mpcontribs-client = "^5.4.3"
hydra-core = "^1.3.2"
pytorch-lightning = "^2.0.7"
torch-cluster = {version = "^1.6.1+pt20cu118", source = "pyg_pt201_cu118"}
torch-scatter = {version = "^2.1.1+pt20cu118", source = "pyg_pt201_cu118"}
torch-sparse = {version = "^0.6.17+pt20cu118", source = "pyg_pt201_cu118"}
pyg-lib = {version = "^0.2.0+pt20cu118", source = "pyg_pt201_cu118"}
torch-spline-conv = {version = "^1.2.2+pt20cu118", source = "pyg_pt201_cu118"}
wandb = "^0.15.8"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.10.1"
mdformat-gfm = "^0.3.5"
mdformat-frontmatter = "^2.0.1"
mdformat_footnote = "^0.1.1"
flake8 = "^5.0.0"
mypy = "^1.0.1"
pytest-cov = "^4.0.0"
ipykernel = "^6.25.1"


[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[[tool.poetry.source]]
name = "pyg_pt201_cu118"
url = "https://data.pyg.org/whl/torch-2.0.1+cu118.html"
priority = "explicit"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = 3.10
# following setting is same as pysen
# https://github.com/pfnet/pysen/blob/main/setup.cfg#L12
check_untyped_defs = true
disallow_any_decorated = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
